Made some small changes and edited documentation
